--- a/Cava Dorada/index.html
+++ b/Cava Dorada/index.html
@@ -1,26 +1,63 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/img/icons/wine-cup.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Cava Dorada</title>
-</head>
-<body>
-    <header>
-        <nav class="menu">
-            <ul>
-              <li><a href="/nuestrosVinos.html">Nuestros Vinos</a></li>
-              <li><a href="/enoturismo.html">Enoturismo</a></li>
-              <li><a href="/nosotros.html">Nosotros</a></li>
-              <li><a href="/tienda.html">Tienda</a></li>
-            </ul>
-          </nav>
-    </header>
-    
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" href="/img/icons/wine-cup.png">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Cava Dorada</title>
+</head>
+
+<body>
+  <!-- header -->
+  <header class="header">
+    <nav class="navbar navbar-expand-lg ">
+      <div class="container">
+        <a class="navbar-brand" href="index.html"> <span class="brand-cava">Cava</span><span
+            class="brand-dorada">DORADA</span></a>
+        <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon custom-toggler"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Nuestros vinos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Enoturismo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Tienda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link px-3" href="#">Contacto</a>
+            </li>
+          </ul>
+          <form class="d-flex">
+            <a href="#" class="user">
+              <i class="fas fa-user px-3 "></i>
+            </a>
+          </form>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
