Primera version de seccion Nuestros Vinos

--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/assets/img/icons/wine-cup.png">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -52,6 +55,39 @@
       </div>
     </nav>
   </header>
+
+  <main>
+    <section class="contenedor-cepas">
+        <a id="link" href="/nuestrosVinos/tintos.html">
+            <div class="background-tintos">
+                <div class="p-tintos">
+                  <p>TINTOS</p> 
+                </div>
+                <img src="/assets/img/nuestros-vinos/tinto.jpg" alt="Seccion de vinos tintos">
+            </div>
+        </a>
+    </section>
+    <section class="contenedor-cepas">
+        <a id="link" href="/nuestrosVinos/blancos.html">
+            <div class="background-blancos">
+                <div class="p-blancos">
+                  <p>BLANCOS</p> 
+                </div>
+                <img src="/assets/img/nuestros-vinos/blanco 3.jpg" alt="Seccion de vinos blancos">
+            </div>
+        </a>
+    </section>
+    <section class="contenedor-cepas">
+        <a id="link" href="/nuestrosVinos/rosados.html">
+            <div class="background-rosados">
+                <div class="p-rosados">
+                  <p>ROSADOS</p> 
+                </div>
+                <img src="/assets/img/nuestros-vinos/rose.jpg" alt="Seccion de vinos rosados">
+            </div>
+        </a>
+    </section>
+</main>
 
 
 
