--- a/Cava Dorada/nosotros/index.html
+++ b/Cava Dorada/nosotros/index.html
@@ -6,10 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="/assets/img/icons/wine-cup.png">
+  <link rel="stylesheet" href="/Users/Silvis/Downloads/cava dorada proyecto/estilos.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+
   <title>Tienda</title>
 </head>
 
@@ -53,11 +54,41 @@
     </nav>
   </header>
 
+  <div class="site-content" > 
+    <div class="container">
+      <div class="d-flex justify-content-center">
+        <div class="ratio ratio-4x3">
+           <video class="video-fluid z-depth-1" autoplay loop controls muted wUidth="800" height="600">
+           <source src="/Users/Silvis/Downloads/cava dorada proyecto/img/vas - 84226.mp4" type="video/mp4">
+           </video>
+          </div>
+          
+      </div>
+       <div class="clearfix">
+      <img src="/Users/Silvis/Downloads/cava dorada proyecto/img/img-oficial-familia-color_1024x1024.webp" class="col-md-6 float-md-end mb-3 ms-md-3" alt="..."width="400" height="400">
+      <br>     
+      <h2>NUESTRA EMPRESA</h2>
+      <p>
+        Somos una Bodega con Herencia Familiar que se proyecta con sus valores de tradición, calidad, prestigio, innovación y contemporaneidad en la vitivinicultura argentina.</p>
+        <p>Somos parte del patrimonio y la riqueza de nuestra tierra. Somos orgullo, logros y una calidad y excelencia irrenunciables en todos nuestros productos, hoy y mirando al futuro.</p>
+        <p>Situados en nuestro histórico terruño de San Rafael y en el Valle de Uco, provincia de Mendoza, somos la bodega patrimonio de la Argentina, reconocida mundialmente por nuestra larga trayectoria elaborando vinos y espumantes de excelencia.</p>
+        <p>Bodega Cava Dorada es hoy una marca global con presencia en más de 40 países representando los valores y la calidad del vino argentino en todo el mundo.</p><p>El terroir de Valle de Uco es un hito para Bodega Cava Dorada por que marca el inicio, el primer movimiento de nuestra estrategia de marca global. Es el crecimiento natural de nuestra historia de más de 90 años en la búsqueda de nuevos sabores para el mercado local e internacional.</p>
+        <h2>NUESTRA VISIÓN</h2>   
+      <p>
+        Convertirnos en una de las Bodegas Argentinas más reconocidas como marca global, honrando su identidad familiar y calidad enológica, construyendo su futuro con la pasión y compromiso de sus colaboradores para entregar valor de forma continua a sus consumidores y a todo el ecosistema de la compañía, de manera sustentable e impulsados por la innovación continua
+      </p>
+      
+      <h2>NUESTRA HISTORIA</h2>    
+  
+      <p>
+        La vocación incansable de don Valentín nunca se apagó. Dispuesto a hacer los mejores vinos del país, importó cepas europeas y las adaptó a las características climáticas y orográficas de la región de San Rafael. Así, poco a poco, fue forjando una bodega familiar cuyo nombre se convertiría en un auténtico patrimonio de la Argentina: Cava Dorada
+      </p>
 
+      <img src="/Users/Silvis/Downloads/cava dorada proyecto/img/cava dorada.png" class="rounded mx-auto d-block" alt="..."width="600" height="400">
+    </div>
+    <br>     
+    </div>
+  
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
-</body>
-
-</html>
+  
