--- a/Cava Dorada/nosotros/index.html
+++ b/Cava Dorada/nosotros/index.html
@@ -59,13 +59,13 @@
       <div class="d-flex justify-content-center">
         <div class="ratio ratio-4x3">
            <video class="video-fluid z-depth-1" autoplay loop controls muted wUidth="800" height="600">
-           <source src="/Users/Silvis/Downloads/cava dorada proyecto/img/vas - 84226.mp4" type="video/mp4">
+           <source src="/Cava Dorada/assets/img/Uvas-84226.mp4" type="video/mp4">
            </video>
           </div>
           
       </div>
        <div class="clearfix">
-      <img src="/Users/Silvis/Downloads/cava dorada proyecto/img/img-oficial-familia-color_1024x1024.webp" class="col-md-6 float-md-end mb-3 ms-md-3" alt="..."width="400" height="400">
+      <img src="/Cava Dorada/assets/img/img-oficial-familia-color_1024x1024.webp" class="col-md-6 float-md-end mb-3 ms-md-3" alt="..."width="400" height="400">
       <br>     
       <h2>NUESTRA EMPRESA</h2>
       <p>
