--- a/Cava Dorada/nosotros/index.html
+++ b/Cava Dorada/nosotros/index.html
@@ -84,7 +84,7 @@
         La vocación incansable de don Valentín nunca se apagó. Dispuesto a hacer los mejores vinos del país, importó cepas europeas y las adaptó a las características climáticas y orográficas de la región de San Rafael. Así, poco a poco, fue forjando una bodega familiar cuyo nombre se convertiría en un auténtico patrimonio de la Argentina: Cava Dorada
       </p>
 
-      <img src="/Users/Silvis/Downloads/cava dorada proyecto/img/cava dorada.png" class="rounded mx-auto d-block" alt="..."width="600" height="400">
+      <img src="/Cava Dorada/assets/img/cava dorada.png" class="rounded mx-auto d-block" alt="..."width="600" height="400">
     </div>
     <br>     
     </div>
