Agregue seccion Contacto

--- a/Cava Dorada/nosotros/index.html
+++ b/Cava Dorada/nosotros/index.html
@@ -19,7 +19,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> <span class="brand-cava">Cava</span><span
+        <a class="navbar-brand" href="/index.html"> <span class="brand-cava">Cava</span><span
             class="brand-dorada">DORADA</span></a>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -41,7 +41,7 @@
               <a class="nav-link px-3" href="/tienda/index.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">Contacto</a>
+              <a class="nav-link px-3" href="/contacto/index.html">Contacto</a>
             </li>
           </ul>
           <form class="d-flex">
