--- a/Cava Dorada/contacto/index.html
+++ b/Cava Dorada/contacto/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> <span class="brand-cava">Cava</span><span
+        <a class="navbar-brand" href="/index.html"> <span class="brand-cava">Cava</span><span
             class="brand-dorada">DORADA</span></a>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -52,6 +52,33 @@
       </div>
     </nav>
   </header>
+  <!-- contact -->
+  <section id="contact">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center contact mt-5 mb-3">
+          <h2>Contactanos</h2>
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col md-6 b-img me-3">
+        </div>
+        <div class="col-md-6 ">
+          <form action="#" class="row g-4">
+            <label for="nombre" class="etiqueta">Nombre*</label>
+            <input type="text" id="nombre" class="form-control mt-2" required>
+            <label for="mail" class="etiqueta">Correo electrónico*</label>
+            <input type="email" id="mail" class="form-control mt-2" required>
+            <label for="mensaje" class="etiqueta">Mensaje*</label>
+            <textarea id="mensaje" cols="30" rows="7" class="form-control mt-2"></textarea>
+            <div class="text-center d-grid">
+              <button class="btn btn-primary" type="submit">Enviar</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
