Seccion Nuestros Vinos - agregando Responsive

--- a/Cava Dorada/nuestrosVinos/blancos.html
+++ b/Cava Dorada/nuestrosVinos/blancos.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="home-icon">
-      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt=""></a>
+      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
