--- a/Cava Dorada/nuestrosVinos/tintos.html
+++ b/Cava Dorada/nuestrosVinos/tintos.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="home-icon">
-      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt=""></a>
+      <a href="/index.html"><img src="/assets/img/nuestros-vinos/home-icon.png" alt="Volver al inicio"></a>
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
@@ -106,7 +106,7 @@
                                   <h4>COSECHA <span class="badge bg-secondary"> 2020 </span></h4>
                                   <hr>
                                   <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
-                                  <h4>NOTAS DE CATA:</h4><h4>Color: Rojo rubí, de intensidad media y reflejos violáceos. Aroma: Predominan las notas de frutas rojas maduras como moras, ciruelas y frutillas y sutiles notas herbales. Sabor: Fresco y frutado, con taninos sedosos y acidez refrescante.</h4><hr>
+                                  <h4>NOTAS DE CATA:</h4><h4>Aspecto: Color rojo rubí, con destellos rojos brillantes.Nariz: Intensas notas a frutilla y arándano con un toque de casis.En boca: Suave y aterciopelado en el paladar, con taninos de grano fino y un final elegante.</h4><hr>
                                   <h4>MARIDAJE:</h4> <h4>Carnes rojas, cordero, cerdo y pato. Ideal con masas, pastas y pizzas.</h4><hr>
                                   <h4>REGIONES: <span class="badge bg-secondary"> Valle de Uco, Mendoza </span></h4> <hr>
                                   <h4>ELEVACIÓN: <span class="badge bg-secondary">1.050 m.s.n.m.</span></h4><hr>
@@ -150,19 +150,18 @@
                             <div class="modal-body">
                               <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
                               <hr>
-                              <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                              <h4>VARIETALES <span class="badge bg-secondary"> 100% Tempranillo</span></h4> 
                               <hr>
                               <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
                               <hr>
-                              <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
-                              <h4>NOTAS DE CATA:</h4><h4>Color: Rojo rubí, de intensidad media y reflejos violáceos. Aroma: Predominan las notas de frutas rojas maduras como moras, ciruelas y frutillas y sutiles notas herbales. Sabor: Fresco y frutado, con taninos sedosos y acidez refrescante.</h4><hr>
+                              <h4> CRIANZA: </h4><h4>Elaborado a partir de una semi maceración carbónica y un uso adecuado de la temperatura para la refrigeración de las pastas, previos a la fermentación de las uvas.</h4><hr>
+                              <h4>NOTAS DE CATA:</h4><h4>Vista, vino de color rojo brillante intenso. Nariz, se destacan aromas a frutos secos y mermeladas. Boca, vino donde
+                                resaltan los taninos con sensación dulce.</h4><hr>
                               <h4>MARIDAJE:</h4> <h4>Carnes rojas, cordero, cerdo y pato. Ideal con masas, pastas y pizzas.</h4><hr>
                               <h4>REGIONES: <span class="badge bg-secondary"> Valle de Uco, Mendoza </span></h4> <hr>
                               <h4>ELEVACIÓN: <span class="badge bg-secondary">1.050 m.s.n.m.</span></h4><hr>
                               <h4>MÉTODO DE COSECHA: <span class="badge bg-secondary">Manual</span></h4><hr>
-                              <h4>VINIFICACIÓN: </h4><h4> Fermentación a una temperatura máxima de
-                                entre 28° y 31°C, con levaduras seleccionadas. Maceración
-                                durante 15 a 20 días. Remontajes cerrados y abiertos, con delestage en varias etapas de la fermentación.</h4><hr>
+                              <h4>VINIFICACIÓN: </h4><h4> Una vez ingresadas las uvas a la bodega son enfriadas para permanecer por un período de 7 días a t° de 8°C en lo que llamamos maceración fría prefermentativa. Terminado dicho período sembramos levaduras seleccionas para producir la fermentación alcohólica que se extenderá por un lapso de 7 a 10 días a una t° de entre 24 -28°C. Descube una vez finalizada la fermentación y corte entre vino de gota y parte de la primera prensada.</h4><hr>
                               <h4>ANALÍTICA: </h4><h4>Alcohol: <span class="badge bg-secondary">14%</span> / Acidez: <span class="badge bg-secondary">5,6 g/l</span></h4><hr>
                             </div>
                             <div class="modal-footer">
@@ -196,11 +195,11 @@
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
-                            <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
+                            <h4> PRECIO <span class="badge text-bg-success"> $2.000</span></h4>
                               <hr>
-                              <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                              <h4>VARIETALES <span class="badge bg-secondary"> 100% Cabernet Sauvignon</span></h4> 
                               <hr>
-                              <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
+                              <h4>COSECHA <span class="badge bg-secondary"> 2021 </span></h4>
                               <hr>
                               <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
                               <h4>NOTAS DE CATA:</h4><h4>Color: Rojo rubí, de intensidad media y reflejos violáceos. Aroma: Predominan las notas de frutas rojas maduras como moras, ciruelas y frutillas y sutiles notas herbales. Sabor: Fresco y frutado, con taninos sedosos y acidez refrescante.</h4><hr>
@@ -243,21 +242,19 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
+                          <h4> PRECIO <span class="badge text-bg-success"> $1.900</span></h4>
                               <hr>
-                              <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                              <h4>VARIETALES <span class="badge bg-secondary"> 100% Cabernet Franc</span></h4> 
                               <hr>
-                              <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
+                              <h4>COSECHA <span class="badge bg-secondary"> 2020 </span></h4>
                               <hr>
-                              <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
-                              <h4>NOTAS DE CATA:</h4><h4>Color: Rojo rubí, de intensidad media y reflejos violáceos. Aroma: Predominan las notas de frutas rojas maduras como moras, ciruelas y frutillas y sutiles notas herbales. Sabor: Fresco y frutado, con taninos sedosos y acidez refrescante.</h4><hr>
-                              <h4>MARIDAJE:</h4> <h4>Carnes rojas, cordero, cerdo y pato. Ideal con masas, pastas y pizzas.</h4><hr>
+                              <h4> CRIANZA: </h4><h4>Fermentación a 24°-28°C en vasijas de 100-150 hl, maceración derante 20-30 dias.</h4><hr>
+                              <h4>NOTAS DE CATA:</h4><h4>En vista se observa un vino intenso con tonalidades rojizas. En nariz se perciben frutos maduros, especiado con leve nota a pimientos. Este vino tiene una boca muy rendonda, de gran volumen y sedoso, con taninos maduros, suaves y elegantes con una sensación de dulzura en el final.</h4><hr>
+                              <h4>MARIDAJE:</h4> <h4>Gran acompañante de platos sencillos como pastas con salsa de tomate, pizzas y asado. Asimismo, también combinan muy bien con carnes de sabores más complejos como pato o cordero.</h4><hr>
                               <h4>REGIONES: <span class="badge bg-secondary"> Valle de Uco, Mendoza </span></h4> <hr>
                               <h4>ELEVACIÓN: <span class="badge bg-secondary">1.050 m.s.n.m.</span></h4><hr>
                               <h4>MÉTODO DE COSECHA: <span class="badge bg-secondary">Manual</span></h4><hr>
-                              <h4>VINIFICACIÓN: </h4><h4> Fermentación a una temperatura máxima de
-                                entre 28° y 31°C, con levaduras seleccionadas. Maceración
-                                durante 15 a 20 días. Remontajes cerrados y abiertos, con delestage en varias etapas de la fermentación.</h4><hr>
+                              <h4>VINIFICACIÓN: </h4><h4> 6 meses de reposo bajo luz, humedad y temperatura controladas</h4><hr>
                               <h4>ANALÍTICA: </h4><h4>Alcohol: <span class="badge bg-secondary">14%</span> / Acidez: <span class="badge bg-secondary">5,6 g/l</span></h4><hr>
                         </div>
                         <div class="modal-footer">
