--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -43,7 +43,7 @@
               <a class="nav-link px-3" href="/tienda/index.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">Contacto</a>
+              <a class="nav-link px-3" href="/contacto/index.html">Contacto</a>
             </li>
           </ul>
           <form class="d-flex">
