Cambie clase css que interferia en otras secciones

--- a/Cava Dorada/nuestrosVinos/blancos.html
+++ b/Cava Dorada/nuestrosVinos/blancos.html
@@ -34,7 +34,7 @@
               <img src="/assets/img/nuestros-vinos/malbec.jpg">
               <div class="product-info">
                       <p>CHARDDONAY</p>
-                      <div class="d-grid gap-2 d-md-block">
+                      <div class="info-grid gap-2 d-md-block">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                           + Info
@@ -81,7 +81,7 @@
             <img src="/assets/img/nuestros-vinos/malbec.jpg">
             <div class="product-info">
                     <p>SAUVIGNON BLANC</p>
-                    <div class="d-grid gap-2 d-md-block">
+                    <div class="info-grid gap-2 d-md-block">
                       <!-- Button trigger modal -->
                       <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                         + Info
@@ -128,7 +128,7 @@
           <img src="/assets/img/nuestros-vinos/malbec.jpg">
           <div class="product-info">
                   <p>TORRONTÉS</p>
-                  <div class="d-grid gap-2 d-md-block">
+                  <div class="info-grid gap-2 d-md-block">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                       + Info
