--- a/Cava Dorada/nuestrosVinos/rosados.html
+++ b/Cava Dorada/nuestrosVinos/rosados.html
@@ -30,10 +30,10 @@
           <div class="cards-container">
 
               <div class="product-card">
-                  <img src="/assets/img/nuestros-vinos/malbec.jpg">
+                  <img src="/assets/img/nuestros-vinos/syrah.jpg">
                   <div class="product-info">
                           <p>SYRAH</p>
-                          <div class="d-grid gap-2 d-md-block">
+                          <div class="info-grid gap-2 d-md-block">
                             <!-- Button trigger modal -->
                             <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                               + Info
@@ -80,7 +80,7 @@
                 <img src="/assets/img/nuestros-vinos/malbec.jpg">
                 <div class="product-info">
                         <p>CINSAULT</p>
-                        <div class="d-grid gap-2 d-md-block">
+                        <div class="info-grid gap-2 d-md-block">
                           <!-- Button trigger modal -->
                           <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                             + Info
@@ -127,7 +127,7 @@
               <img src="/assets/img/nuestros-vinos/malbec.jpg">
               <div class="product-info">
                       <p>PINOT NOIR</p>
-                      <div class="d-grid gap-2 d-md-block">
+                      <div class="info-grid gap-2 d-md-block">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                           + Info
