--- a/Cava Dorada/nuestrosVinos/tintos.html
+++ b/Cava Dorada/nuestrosVinos/tintos.html
@@ -36,7 +36,7 @@
                         <p>MALBEC</p>
                         
                         
-                        <div class="d-grid gap-2 d-md-block">
+                        <div class="info-grid gap-2 d-md-block">
                           <!-- Button trigger modal -->
                           <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalMalbec">
                             + Info
@@ -84,7 +84,7 @@
               <img src="/assets/img/nuestros-vinos/merlot.jpg">
               <div class="product-info">
                       <p>MERLOT</p>
-                      <div class="d-grid gap-2 d-md-block">
+                      <div class="info-grid gap-2 d-md-block">
                         <!-- Button trigger modal -->
                         <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalMerlot">
                           + Info
@@ -133,7 +133,7 @@
             <div class="product-info">
 
                     <p>TEMPRANILLO</p>
-                    <div class="d-grid gap-2 d-md-block">
+                    <div class="info-grid gap-2 d-md-block">
                       <!-- Button trigger modal -->
                       <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalTempranillo">
                         + Info
@@ -180,7 +180,7 @@
           <img src="/assets/img/nuestros-vinos/c-sauvignon.jpg">
           <div class="product-info">
                   <p>CABERNET SAUVIGNON</p>
-                  <div class="d-grid gap-2 d-md-block">
+                  <div class="info-grid gap-2 d-md-block">
                     <!-- Button trigger modal -->
                     <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalSauvignon">
                       + Info
@@ -227,7 +227,7 @@
         <img src="/assets/img/nuestros-vinos/c-franc.png">
         <div class="product-info">
                 <p>CABERNET FRANC</p>
-                <div class="d-grid gap-2 d-md-block">
+                <div class="info-grid gap-2 d-md-block">
                   <!-- Button trigger modal -->
                   <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
                     + Info
