--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -88,6 +88,37 @@
         </a>
     </section>
 </main>
+<!-- footer -->
+<footer class="footer py-4">
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col-md-4">
+        <p class="br-footer">CavaDorada</p>
+      </div>
+      <div class="col-md-4 contact-details">
+        <a href="mailto:administracion@cavadorada.com">
+          <p><i class="fa-solid fa-envelope"></i> administracion@cavadorada.com</p>
+        </a>
+        <a href="tel:+54-1111-111111">
+          <p><i class="fa-solid fa-phone"></i> +54-261-222222</p>
+        </a>
+        <a href="https://maps.app.goo.gl/UAUN6YMA1vMhZQkB7" target="_blank">
+          <p><i class="fa-solid fa-location-pin"></i> Banegas M5620, Tunuyán, Mendoza, Argentina</p>
+        </a>
+      </div>
+      <div class="col-md-4 text-end">
+        <div class="iconos">
+          <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram px-3"></i></a>
+          <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook px-3"></i></a>
+          <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter px-3"></i></a>
+        </div>
+      </div>
+    </div>
+    <hr>
+    <p class="text-center sub-cont"> CavaDorada&copy;2022 - Beber con moderación. Prohibida la venta de alcohol a
+      menores de 18 años.</p>
+  </div>
+</footer>
 
 
 
