--- a/Cava Dorada/enoturismo/index.html
+++ b/Cava Dorada/enoturismo/index.html
@@ -18,7 +18,7 @@
   <header class="header">
     <nav class="navbar navbar-expand-lg ">
       <div class="container">
-        <a class="navbar-brand" href="index.html"> <span class="brand-cava">Cava</span><span
+        <a class="navbar-brand" href="/index.html"> <span class="brand-cava">Cava</span><span
             class="brand-dorada">DORADA</span></a>
         <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse"
           data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -40,7 +40,7 @@
               <a class="nav-link px-3" href="/tienda/index.html">Tienda</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link px-3" href="#">Contacto</a>
+              <a class="nav-link px-3" href="/contacto/index.html">Contacto</a>
             </li>
           </ul>
           <form class="d-flex">
@@ -52,6 +52,38 @@
       </div>
     </nav>
   </header>
+
+  <!-- footer -->
+  <footer class="footer py-4">
+    <div class="container mt-3">
+      <div class="row">
+        <div class="col-md-4">
+          <p class="br-footer">CavaDorada</p>
+        </div>
+        <div class="col-md-4 contact-details">
+          <a href="mailto:administracion@cavadorada.com">
+            <p><i class="fa-solid fa-envelope"></i> administracion@cavadorada.com</p>
+          </a>
+          <a href="tel:+54-1111-111111">
+            <p><i class="fa-solid fa-phone"></i> +54-261-222222</p>
+          </a>
+          <a href="https://maps.app.goo.gl/UAUN6YMA1vMhZQkB7" target="_blank">
+            <p><i class="fa-solid fa-location-pin"></i> Banegas M5620, Tunuyán, Mendoza, Argentina</p>
+          </a>
+        </div>
+        <div class="col-md-4 text-end">
+          <div class="iconos">
+            <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram px-3"></i></a>
+            <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook px-3"></i></a>
+            <a href="https://twitter.com" target="_blank"><i class="fa-brands fa-twitter px-3"></i></a>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <p class="text-center sub-cont"> CavaDorada&copy;2022 - Beber con moderación. Prohibida la venta de alcohol a
+        menores de 18 años.</p>
+    </div>
+  </footer>
 
 
 
