--- a/Cava Dorada/index.html
+++ b/Cava Dorada/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+  <div class="elfsight-app-f91ea849-4df7-4b77-ad04-ad11f550bc75"></div>
    <!-- header -->
     <header class="header">
     <nav class="navbar navbar-expand-lg ">
@@ -52,6 +54,7 @@
       </div>
     </nav>
   </header>
+  
   <!-- footer -->
   <footer class="footer py-4">
     <div class="container mt-3">
