Agregando img en seccion Nuestros Vinos, controladores mvc

--- a/Cava Dorada/nuestrosVinos/blancos/index.html
+++ b/Cava Dorada/nuestrosVinos/blancos/index.html
@@ -19,9 +19,9 @@
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
-          <a href="/nuestrosVinos/tintos.html"><p>TINTOS</p></a>
-          <a href="/nuestrosVinos/blancos.html"><p>BLANCOS</p></a>
-          <a href="/nuestrosVinos/rosados.html"><p>ROSADOS</p></a>  
+          <a href="/nuestrosVinos/tintos/"><p>TINTOS</p></a>
+          <a href="/nuestrosVinos/blancos/"><p>BLANCOS</p></a>
+          <a href="/nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
         </div>
       </div>
   </header>
@@ -31,27 +31,27 @@
           <div class="cards-container">
 
             <div class="product-card">
-              <img src="/assets/img/nuestros-vinos/malbec.jpg">
+              <img src="/assets/img/nuestros-vinos/charddonay.png">
               <div class="product-info">
                       <p>CHARDDONAY</p>
                       <div class="info-grid gap-2 d-md-block">
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
+                        <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalCharddonay">
                           + Info
                         </button>
       
                         <!-- Modal -->
-                        <div class="modal fade" id="modalFranc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                        <div class="modal fade" id="modalCharddonay" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                           <div class="modal-dialog modal-dialog-scrollable">
                             <div class="modal-content">
                               <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="exampleModalLabel">CABERNET FRANC</h1>
+                                <h1 class="modal-title fs-5" id="exampleModalLabel">CHARDDONAY</h1>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                               </div>
                               <div class="modal-body">
                                 <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
                                     <hr>
-                                    <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                                    <h4>VARIETALES <span class="badge bg-secondary"> 100% Charddonay</span></h4> 
                                     <hr>
                                     <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
                                     <hr>
@@ -78,29 +78,29 @@
           </div> 
 
           <div class="product-card">
-            <img src="/assets/img/nuestros-vinos/malbec.jpg">
+            <img src="/assets/img/nuestros-vinos/s-blanc.png">
             <div class="product-info">
                     <p>SAUVIGNON BLANC</p>
                     <div class="info-grid gap-2 d-md-block">
                       <!-- Button trigger modal -->
-                      <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
+                      <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modal-s-blanc">
                         + Info
                       </button>
     
                       <!-- Modal -->
-                      <div class="modal fade" id="modalFranc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal fade" id="modal-s-blanc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-dialog-scrollable">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h1 class="modal-title fs-5" id="exampleModalLabel">CABERNET FRANC</h1>
+                              <h1 class="modal-title fs-5" id="exampleModalLabel">SAUVIGNON BLANC</h1>
                               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
                             <div class="modal-body">
-                              <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
+                              <h4> PRECIO <span class="badge text-bg-success"> $1.500</span></h4>
                                   <hr>
-                                  <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                                  <h4>VARIETALES <span class="badge bg-secondary"> 100% Sauvignon Blanc</span></h4> 
                                   <hr>
-                                  <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
+                                  <h4>COSECHA <span class="badge bg-secondary"> 2021 </span></h4>
                                   <hr>
                                   <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
                                   <h4>NOTAS DE CATA:</h4><h4>Color: Rojo rubí, de intensidad media y reflejos violáceos. Aroma: Predominan las notas de frutas rojas maduras como moras, ciruelas y frutillas y sutiles notas herbales. Sabor: Fresco y frutado, con taninos sedosos y acidez refrescante.</h4><hr>
@@ -125,27 +125,27 @@
         </div> 
 
         <div class="product-card">
-          <img src="/assets/img/nuestros-vinos/malbec.jpg">
+          <img src="/assets/img/nuestros-vinos/torrontes.png">
           <div class="product-info">
                   <p>TORRONTÉS</p>
                   <div class="info-grid gap-2 d-md-block">
                     <!-- Button trigger modal -->
-                    <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalFranc">
+                    <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalTorrontes">
                       + Info
                     </button>
   
                     <!-- Modal -->
-                    <div class="modal fade" id="modalFranc" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="modalTorrontes" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                       <div class="modal-dialog modal-dialog-scrollable">
                         <div class="modal-content">
                           <div class="modal-header">
-                            <h1 class="modal-title fs-5" id="exampleModalLabel">CABERNET FRANC</h1>
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">TORRONTÉS</h1>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                           </div>
                           <div class="modal-body">
                             <h4> PRECIO <span class="badge text-bg-success"> $1.400</span></h4>
                                 <hr>
-                                <h4>VARIETALES <span class="badge bg-secondary"> 100% </span></h4> 
+                                <h4>VARIETALES <span class="badge bg-secondary"> 100% Torrontés</span></h4> 
                                 <hr>
                                 <h4>COSECHA <span class="badge bg-secondary"> 2022 </span></h4>
                                 <hr>
