--- a/Cava Dorada/nuestrosVinos/index.html
+++ b/Cava Dorada/nuestrosVinos/index.html
@@ -12,7 +12,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Nuestros Vinos</title>
 </head>
 
@@ -58,7 +58,7 @@
 
   <main>
     <section class="contenedor-cepas">
-        <a id="link" href="/nuestrosVinos/tintos.html">
+        <a id="link" href="../nuestrosVinos/tintos/">
             <div class="background-tintos">
                 <div class="p-tintos">
                   <p>TINTOS</p> 
@@ -68,7 +68,7 @@
         </a>
     </section>
     <section class="contenedor-cepas">
-        <a id="link" href="/nuestrosVinos/blancos.html">
+        <a id="link" href="../nuestrosVinos/blancos/">
             <div class="background-blancos">
                 <div class="p-blancos">
                   <p>BLANCOS</p> 
@@ -78,7 +78,7 @@
         </a>
     </section>
     <section class="contenedor-cepas">
-        <a id="link" href="/nuestrosVinos/rosados.html">
+        <a id="link" href="../nuestrosVinos/rosados/">
             <div class="background-rosados">
                 <div class="p-rosados">
                   <p>ROSADOS</p> 
