--- a/Cava Dorada/nuestrosVinos/tintos/index.html
+++ b/Cava Dorada/nuestrosVinos/tintos/index.html
@@ -19,9 +19,9 @@
     </div>
       <div class="cabecera-vinos">   
         <div class="encabezado">
-          <a href="/nuestrosVinos/tintos.html"><p>TINTOS</p></a>
-          <a href="/nuestrosVinos/blancos.html"><p>BLANCOS</p></a>
-          <a href="/nuestrosVinos/rosados.html"><p>ROSADOS</p></a>  
+          <a href="/nuestrosVinos/tintos/"><p>TINTOS</p></a>
+          <a href="/nuestrosVinos/blancos/"><p>BLANCOS</p></a>
+          <a href="/nuestrosVinos/rosados/"><p>ROSADOS</p></a>  
         </div>
       </div>
   </header>
@@ -78,55 +78,7 @@
                           <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
                         </div>
                 </div>
-            </div> 
-
-            <div class="product-card">
-              <img src="/assets/img/nuestros-vinos/merlot.jpg">
-              <div class="product-info">
-                      <p>MERLOT</p>
-                      <div class="info-grid gap-2 d-md-block">
-                        <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalMerlot">
-                          + Info
-                        </button>
-
-                        <!-- Modal -->
-                        <div class="modal fade" id="modalMerlot" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                          <div class="modal-dialog modal-dialog-scrollable">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="modal-merlot"> MERLOT</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                              </div>
-                              <div class="modal-body">
-                                <h4> PRECIO <span class="badge text-bg-success"> $1.700</span></h4>
-                                  <hr>
-                                  <h4>VARIETALES <span class="badge bg-secondary"> 100% Merlot</span></h4> 
-                                  <hr>
-                                  <h4>COSECHA <span class="badge bg-secondary"> 2020 </span></h4>
-                                  <hr>
-                                  <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
-                                  <h4>NOTAS DE CATA:</h4><h4>Aspecto: Color rojo rubí, con destellos rojos brillantes.Nariz: Intensas notas a frutilla y arándano con un toque de casis.En boca: Suave y aterciopelado en el paladar, con taninos de grano fino y un final elegante.</h4><hr>
-                                  <h4>MARIDAJE:</h4> <h4>Carnes rojas, cordero, cerdo y pato. Ideal con masas, pastas y pizzas.</h4><hr>
-                                  <h4>REGIONES: <span class="badge bg-secondary"> Valle de Uco, Mendoza </span></h4> <hr>
-                                  <h4>ELEVACIÓN: <span class="badge bg-secondary">1.050 m.s.n.m.</span></h4><hr>
-                                  <h4>MÉTODO DE COSECHA: <span class="badge bg-secondary">Manual</span></h4><hr>
-                                  <h4>VINIFICACIÓN: </h4><h4> Fermentación a una temperatura máxima de
-                                    entre 28° y 31°C, con levaduras seleccionadas. Maceración
-                                    durante 15 a 20 días. Remontajes cerrados y abiertos, con delestage en varias etapas de la fermentación.</h4><hr>
-                                  <h4>ANALÍTICA: </h4><h4>Alcohol: <span class="badge bg-secondary">14%</span> / Acidez: <span class="badge bg-secondary">5,55 g/l</span></h4><hr>
-                                  
-                              </div>
-                              <div class="modal-footer">
-                                <button type="button" class="btn btn-cards" data-bs-dismiss="modal">Close</button>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                        <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
-                      </div>
-              </div>
-          </div> 
+            </div>  
 
           <div class="product-card">
             <img src="/assets/img/nuestros-vinos/tempranillo.jpg">
@@ -267,6 +219,54 @@
                 </div>
         </div>
     </div> 
+
+    <div class="product-card">
+      <img src="/assets/img/nuestros-vinos/merlot.png">
+      <div class="product-info">
+              <p>MERLOT</p>
+              <div class="info-grid gap-2 d-md-block">
+                <!-- Button trigger modal -->
+                <button type="button" class="btn btn-cards" data-bs-toggle="modal" data-bs-target="#modalMerlot">
+                  + Info
+                </button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="modalMerlot" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog modal-dialog-scrollable">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="modal-merlot"> MERLOT</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                      </div>
+                      <div class="modal-body">
+                        <h4> PRECIO <span class="badge text-bg-success"> $1.700</span></h4>
+                          <hr>
+                          <h4>VARIETALES <span class="badge bg-secondary"> 100% Merlot</span></h4> 
+                          <hr>
+                          <h4>COSECHA <span class="badge bg-secondary"> 2020 </span></h4>
+                          <hr>
+                          <h4> CRIANZA: </h4><h4>40% del vino en barricas de roble francés de tercer y cuarto uso durante 8 meses.</h4><hr>
+                          <h4>NOTAS DE CATA:</h4><h4>Aspecto: Color rojo rubí, con destellos rojos brillantes.Nariz: Intensas notas a frutilla y arándano con un toque de casis.En boca: Suave y aterciopelado en el paladar, con taninos de grano fino y un final elegante.</h4><hr>
+                          <h4>MARIDAJE:</h4> <h4>Carnes rojas, cordero, cerdo y pato. Ideal con masas, pastas y pizzas.</h4><hr>
+                          <h4>REGIONES: <span class="badge bg-secondary"> Valle de Uco, Mendoza </span></h4> <hr>
+                          <h4>ELEVACIÓN: <span class="badge bg-secondary">1.050 m.s.n.m.</span></h4><hr>
+                          <h4>MÉTODO DE COSECHA: <span class="badge bg-secondary">Manual</span></h4><hr>
+                          <h4>VINIFICACIÓN: </h4><h4> Fermentación a una temperatura máxima de
+                            entre 28° y 31°C, con levaduras seleccionadas. Maceración
+                            durante 15 a 20 días. Remontajes cerrados y abiertos, con delestage en varias etapas de la fermentación.</h4><hr>
+                          <h4>ANALÍTICA: </h4><h4>Alcohol: <span class="badge bg-secondary">14%</span> / Acidez: <span class="badge bg-secondary">5,55 g/l</span></h4><hr>
+                          
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-cards" data-bs-dismiss="modal">Close</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <a class="btn btn-cards" type="button"><img src="/assets/img/icons/carrito1.png" alt="añadir al carrito"></a>
+              </div>
+      </div>
+  </div>
 
         </div>
     </section>
